# baltazar

./: .gitignore  CX_PME.py  Inteligencia_OP.py  README.md  __init__.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
ML/: preparacao_dados.py
ML/N_supervisionado/: kmeans.py
ML/graficos_estatisticos/: graficos_ml.py  graficos_series_temporais.py
ML/supervisionado/: knn_similaridade.py
ML/supervisionado/regressao/: suposicoes_regressao.py
ML/supervisionado/regressao_linear/: avaliacoes_regressao.py  suposicoes_regressao.py
ML/supervisionado/regressao_linear/regressao_lasso_ridge/: grid_search_manual.py
ML/supervisionado/regressao_logistica/avaliacoes_RLG/: metricas_modelo.py
ML/supervisionado/series_temporais/: suposicoes_series_temporais.py  transformacoes_temporais.py  validacao_series_temporais.py
exemplos/: 01_preparacao_dados.ipynb  02_transformacoes.ipynb  03_analise_exploratoria.ipynb  04_graficos_estatisticos.ipynb  05_series_temporais.ipynb  06_ml_supervisionado.ipynb  criar_notebooks.py  encoding_exemplo.ipynb
funcoes_data_frames/: __init__.py  analise_exploratoria.py  dados_fake.py  leitura_csv.py  preparacao_dados.py  transformacoes.py  transformacoes_temporais.py
funcoes_so/: trabalha_arquivos.py
graficos/graficos_estatisticos/: graficos.py
graficos/graficos_streamlit/: __init__.py  graficos.py  mapas_dinamicos.py  transformadores.py
tests/: test_ml.py
